; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_unicode-utils.c_unicode_tolower.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_unicode-utils.c_unicode_tolower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TABLE_SIZE = common dso_local global i64 0, align 8
@to_lower_table = common dso_local global i32* null, align 8
@to_lower_table_ranges = common dso_local global i32 0, align 4
@to_lower_table_ranges_size = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unicode_tolower(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i64, i64* @TABLE_SIZE, align 8
  %6 = trunc i64 %5 to i32
  %7 = icmp ult i32 %4, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32*, i32** @to_lower_table, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load i32, i32* @to_lower_table_ranges, align 4
  %16 = load i32, i32* @to_lower_table_ranges_size, align 4
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @binary_search_ranges(i32 %15, i32 %16, i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %8
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @binary_search_ranges(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
